avcodec/h264: fix frame skip code

Fixes Ticket3475

Signed-off-by: Michael Niedermayer <michaelni@gmx.at>